--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Wee AI - Free Online AI Tools</title>
+    <title>Wengdev AI Tools</title>
 
     <!-- Meta Tag -->
     <meta charset="utf-8" />
@@ -16,38 +16,20 @@
       name="description"
       content="Unleash your imagination and experiment with AI Wee-AI offers free image generation and AI chat tools."
     />
-    <meta
-      name="keywords"
-      content="wee ai,ai tools,image generation,ai assistant,creative tools,ai art,ai writing,generative art,chatbots,free online tools,creativity,experimentation,explore ai"
-    />
-    <meta name="msapplication-TileColor" content="#212121" />
-    <meta name="theme-color" content="#212121" />
-
-    <meta itemprop="name" content="Wee AI - Free Online AI Tools" />
-    <meta itemprop="image" content="https://wee-ai.web.app/thumbnail.png" />
+   
 
     <!-- Opengraph -->
-    <meta name="og:title" content="Wee AI - Free Online AI Tools" />
-    <meta name="og:locale" content="en_EN" />
-    <meta
-      name="og:description"
-      content="Unleash your imagination and experiment with AI Wee-AI offers free image generation and AI chat tools."
-    />
+
+  
     <meta name="og:image:type" content="image/png" />
     <meta name="og:image:width" content="1200" />
     <meta name="og:image:heigh" content="630" />
-    <meta name="og:image" content="https://wee-ai.web.app/thumbnail.png" />
-    <meta name="og:url" content="https://wee-ai.web.app/" />
     <!-- End Opengraph -->
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Wee AI - Free Online AI Tools" />
-    <meta
-      name="twitter:description"
-      content="Unleash your imagination and experiment with AI Wee-AI offers free image generation and AI chat tools."
-    />
-    <meta name="twitter:image" content="https://wee-ai.web.app/thumbnail.png" />
+    <meta name="twitter:title" content="Wengdev AI - Free Online AI Tools" />
+    
     <!-- End Twitter -->
     <!-- End Meta Tag -->
 
@@ -67,10 +49,10 @@
       style="visibility: hidden; width: 0 !important; height: 0 !important"
       id="seo-up"
     >
-      <h1>Wee AI - Free Online AI Tools</h1>
+      <h1>Wengdev AI - Free Online AI Tools</h1>
       <h2>Features</h2>
       <p>
-        What is Wee AI? Wee AI is a website that provides free online AI tools.
+        What is Wengdev AI? Wengdev AI is a website that provides free online AI tools.
         The AI tools provided for free are Chat AI and Text-to-Image Generator
         with various models available.
       </p>
@@ -88,11 +70,11 @@
       <article id="tech">
         <h3>Technologies</h3>
         <p>
-          Wee AI uses the API provided by Huggingface to provide image creation services. Huggingface API provides many categories of AI Models. The model category used in this application is Text-to-Image.
+          Wengdev AI uses the API provided by Huggingface to provide image creation services. Huggingface API provides many categories of AI Models. The model category used in this application is Text-to-Image.
         </p>
-        <p> Wee AI uses the API provided by Deepinfra to provide Chat AI services. Deepinfra provides many AI Chat Models, in this case, Wee AI takes all the AI Chat models available on Deepinfra to provide AI Chat services.
+        <p> Wengdev AI uses the API provided by Deepinfra to provide Chat AI services. Deepinfra provides many AI Chat Models, in this case, Wee AI takes all the AI Chat models available on Deepinfra to provide AI Chat services.
         </p>
-        <p>Wee AI create on Vite with React TS template and hosted in Firebase Hosting.</p>
+        <p>Wengdev AI create on Vite with React TS template and hosted in Vercel PAAS.</p>
       </article>
     </div>
     <div id="root"></div>
